# vala-sde-tool

./: LICENSE  README.md  com.blogspot.bitwalk.json  meson.build  mingw64.ini  sde-tool.css
builddir/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json
builddir/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-dependencies.json  intro-installed.json  intro-projectinfo.json  intro-targets.json  meson-info.json
builddir/meson-logs/: meson-log.txt
builddir/meson-private/: cmd_line.txt  coredata.dat.prev
builddir/src/sde-tool.exe.p/: container.c  dialogs.c  main.c  main_gui.c
src/: container.vala  css.vala  dialogs.vala  main.vala  main_gui.vala  menubar.vala  meson.build  sde-tool.vala  tool.rc
